--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="home-content">
       <div class="text">
         <div class="text-one">Hello,</div>
-        <div class="text-two">I'm Prem Shahi</div>
+        <div class="text-two">I'm IA Afiq</div>
         <div class="text-three">UI/UX Designer</div>
         <div class="text-four">From Nepal</div>
       </div>
