--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
    
   <!-- Move to up button -->
   <div class="scroll-button">
-    <a href="#home"><i class="fas fa-arrow-up"></i></a>
-  </div>
+  <a href="#home">
+    <i class="fas fa-arrow-up"></i>
+  </a>
+</div>
+
 
   <!-- Navigation menu -->
   <nav>
@@ -220,17 +223,19 @@
 
   <script src="script.js"></script>
 </body>
+<!-- Smartsupp Live Chat script -->
 <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6958d6bd64eac9197f413a91/1je1gdli9';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = '18fdc34b816901013e55926bb12062c3e9361351';
+window.smartsupp||(function(d) {
+  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+  c.type='text/javascript';c.charset='utf-8';c.async=true;
+  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
 </script>
+<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+
 
 <!-- Button click function -->
 <script>
