--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
   />
+   <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -27,39 +31,49 @@
 
   <!-- Navigation menu -->
   <nav>
-    <div class="navbar">
-      <div class="logo"><a href="#">Portfolio.</a></div>
+  <div class="navbar">
 
-      <ul class="menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-
-        <div class="cancel-btn">
-          <i class="fas fa-times"></i>
-        </div>
-      </ul>
-
-      <div class="media-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-      </div>
+    <!-- LOGO -->
+    <div class="logo">
+      <a href="#">Portfolio.</a>
     </div>
 
+    <!-- MENU -->
+    <ul class="menu">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+
+    <!-- SOCIAL ICONS (DESKTOP) -->
+    <div class="media-icons">
+      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="#"><i class="fa-brands fa-twitter"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+
+    <!-- HAMBURGER -->
     <div class="menu-btn">
-      <i class="fas fa-bars"></i>
+      <i class="fa-solid fa-bars"></i>
     </div>
-  </nav>
+
+    <!-- CLOSE -->
+    <div class="cancel-btn">
+      <i class="fa-solid fa-xmark"></i>
+    </div>
+
+  </div>
+</nav>
+
 
  <section class="home dark-home" id="home">
   <div class="home-content">
     <div class="text">
       <span class="badge">Welcome</span>
-      <h1>I'm <span>IA Afiq</span></h1>
-      <h3>UI / UX Designer</h3>
+      <h1>I'm <span>I'm IA Afiq</span></h1>
+      <h3>Creative UI/UX Designer & Front-End Developer.</h3>
       <p>
         Crafting modern, clean & user-friendly digital experiences.
       </p>
@@ -82,17 +96,17 @@
       <h2>Designing is my <span>Passion</span></h2>
 
       <p>
-        I am IA Afiq, a UI/UX designer focused on clean, modern and
-        user-friendly digital experiences.
+        I am IA Afiq, a Creative UI/UX Designer & Front-End Developer and Class 9 student at Rajshahi Collegiate School. With 2 years of learning experience, I create clean, modern, and user-friendly designs using HTML, CSS, and basic JavaScript.
+        
       </p>
 
       <div class="stats">
         <div>
-          <h3>3+</h3>
+          <h3>2+</h3>
           <span>Years</span>
         </div>
         <div>
-          <h3>50+</h3>
+          <h3>10+</h3>
           <span>Projects</span>
         </div>
         <div>
@@ -118,10 +132,10 @@
       <div class="skills-details">
         <div class="text">
           <div class="topic">Skills Reflects Our Knowledge</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p>My skills represent my learning journey, creativity, and hands-on practice in design and development.</p>
 
           <div class="experience">
-            <div class="num">10</div>
+            <div class="num">2</div>
             <div class="exp">
               Years Of <br /> Experience
             </div>
@@ -139,11 +153,11 @@
           </div>
           <div class="box">
             <div class="topic">JavaScript</div>
-            <div class="per">70%</div>
+            <div class="per">50%</div>
           </div>
           <div class="box">
             <div class="topic">PHP</div>
-            <div class="per">60%</div>
+            <div class="per">40%</div>
           </div>
         </div>
       </div>
@@ -152,48 +166,50 @@
 
   <!-- Services Section -->
   <section class="services" id="services">
-    <div class="content">
-      <div class="title"><span>My Services</span></div>
+  <div class="content">
+    <div class="title"><span>My Services</span></div>
 
-      <div class="boxes">
-        <div class="box">
-          <div class="icon"><i class="fas fa-desktop"></i></div>
-          <div class="topic">Web Development</div>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
+    <div class="boxes">
 
-        <div class="box">
-          <div class="icon"><i class="fas fa-paint-brush"></i></div>
-          <div class="topic">Graphic Design</div>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-
-        <div class="box">
-          <div class="icon"><i class="fas fa-chart-line"></i></div>
-          <div class="topic">Digital Marketing</div>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-
-        <div class="box">
-          <div class="icon"><i class="fab fa-android"></i></div>
-          <div class="topic">Icon Design</div>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-
-        <div class="box">
-          <div class="icon"><i class="fas fa-camera-retro"></i></div>
-          <div class="topic">Photography</div>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-
-        <div class="box">
-          <div class="icon"><i class="fas fa-tablet-alt"></i></div>
-          <div class="topic">Apps Development</div>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
+      <div class="box">
+        <div class="icon"><i class="fas fa-desktop"></i></div>
+        <div class="topic">UI / UX Design</div>
+        <p>Clean, modern and user-friendly website interface design focused on good user experience.</p>
       </div>
+
+      <div class="box">
+        <div class="icon"><i class="fas fa-code"></i></div>
+        <div class="topic">Front-End Development</div>
+        <p>Responsive websites built using HTML, CSS and basic JavaScript.</p>
+      </div>
+
+      <div class="box">
+        <div class="icon"><i class="fas fa-mobile-alt"></i></div>
+        <div class="topic">Responsive Web Design</div>
+        <p>Mobile, tablet and desktop friendly designs for all screen sizes.</p>
+      </div>
+
+      <div class="box">
+        <div class="icon"><i class="fas fa-file-alt"></i></div>
+        <div class="topic">Document Design</div>
+        <p>Professional MS Word documents and well-structured MS Excel sheets.</p>
+      </div>
+
+      <div class="box">
+        <div class="icon"><i class="fas fa-paint-brush"></i></div>
+        <div class="topic">Basic Graphic Design</div>
+        <p>Simple image, banner and visual design for web and social media.</p>
+      </div>
+
+      <div class="box">
+        <div class="icon"><i class="fas fa-tools"></i></div>
+        <div class="topic">Website Customization</div>
+        <p>Improving layout, colors, spacing and fixing UI issues in existing websites.</p>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section class="contact" id="contact">
@@ -202,7 +218,7 @@
 
       <div class="text">
         <div class="topic">Have Any Project?</div>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>If you have an idea, project, or need help with design or development, feel free to contact me. I am always open to learning, collaborating, and creating clean, user-friendly digital experiences.</p>
 
         <div class="button">
           <button onclick="openChat()">Let's Chat</button>
@@ -234,6 +250,7 @@ window.smartsupp||(function(d) {
   c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
 })(document);
 </script>
+<script>smartsupp('group', 'aqvcStQdj6'); //group A F I Q </script>
 <noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
 
 
