--- a/index.html
+++ b/index.html
@@ -86,24 +86,26 @@
 </section>
 
 
-  <!-- About Section -->
- <section class="about dark-about" id="about">
+  <section class="about dark-about" id="about">
   <div class="content">
     <div class="right">
 
-      <span class="tag">Who I Am</span>
+      <span class="tag">WHO I AM</span>
 
       <h2>Designing is my <span>Passion</span></h2>
 
       <p>
-        I am IA Afiq, a Creative UI/UX Designer & Front-End Developer and Class 9 student at Rajshahi Collegiate School. With 2 years of learning experience, I create clean, modern, and user-friendly designs using HTML, CSS, and basic JavaScript.
-        
+        I am IA Afiq, a Creative UI/UX Designer & Front-End Developer
+        and a Class 9 student at Rajshahi Collegiate School.
+        With 2 years of learning experience, I build clean,
+        modern & user-friendly web interfaces using HTML, CSS
+        and basic JavaScript.
       </p>
 
       <div class="stats">
         <div>
           <h3>2+</h3>
-          <span>Years</span>
+          <span>Years Experience</span>
         </div>
         <div>
           <h3>10+</h3>
@@ -124,118 +126,226 @@
 </section>
 
 
+
   <!-- Skills Section -->
-  <section class="skills" id="skills">
-    <div class="content">
-      <div class="title"><span>My Skills</span></div>
+<section class="skills dark-skills" id="skills">
+  <div class="content">
 
-      <div class="skills-details">
-        <div class="text">
-          <div class="topic">Skills Reflects Our Knowledge</div>
-          <p>My skills represent my learning journey, creativity, and hands-on practice in design and development.</p>
+    <div class="title">
+      <span>My Skills</span>
+    </div>
 
-          <div class="experience">
-            <div class="num">2</div>
-            <div class="exp">
-              Years Of <br /> Experience
-            </div>
-          </div>
-        </div>
+    <div class="skills-details">
 
-        <div class="boxes">
-          <div class="box">
-            <div class="topic">HTML</div>
-            <div class="per">90%</div>
-          </div>
-          <div class="box">
-            <div class="topic">CSS</div>
-            <div class="per">80%</div>
-          </div>
-          <div class="box">
-            <div class="topic">JavaScript</div>
-            <div class="per">50%</div>
-          </div>
-          <div class="box">
-            <div class="topic">PHP</div>
-            <div class="per">40%</div>
+      <!-- LEFT CONTENT -->
+      <div class="text">
+        <div class="topic">Skills Reflect My Knowledge</div>
+        <p>
+          My skills represent my learning journey, creativity,
+          and hands-on practice in modern web design and
+          front-end development.
+        </p>
+
+        <div class="experience">
+          <div class="num">2+</div>
+          <div class="exp">
+            Years Of <br> Experience
           </div>
         </div>
       </div>
-    </div>
-  </section>
 
-  <!-- Services Section -->
-  <section class="services" id="services">
+      <!-- RIGHT SKILL CARDS -->
+      <div class="boxes">
+
+        <div class="box">
+          <div class="topic">HTML</div>
+          <div class="per">95%</div>
+        </div>
+
+        <div class="box">
+          <div class="topic">CSS</div>
+          <div class="per">90%</div>
+        </div>
+
+        <div class="box">
+          <div class="topic">JavaScript</div>
+          <div class="per">65%</div>
+        </div>
+
+        <div class="box">
+          <div class="topic">UI / UX</div>
+          <div class="per">85%</div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Services Section -->
+<section class="services dark-services" id="services">
   <div class="content">
-    <div class="title"><span>My Services</span></div>
+
+    <div class="title">
+      <span>My Services</span>
+    </div>
 
     <div class="boxes">
 
       <div class="box">
         <div class="icon"><i class="fas fa-desktop"></i></div>
         <div class="topic">UI / UX Design</div>
-        <p>Clean, modern and user-friendly website interface design focused on good user experience.</p>
+        <p>Clean, modern & user-friendly interface design focused on great user experience.</p>
       </div>
 
       <div class="box">
         <div class="icon"><i class="fas fa-code"></i></div>
         <div class="topic">Front-End Development</div>
-        <p>Responsive websites built using HTML, CSS and basic JavaScript.</p>
+        <p>Responsive websites built using HTML, CSS & basic JavaScript.</p>
       </div>
 
       <div class="box">
         <div class="icon"><i class="fas fa-mobile-alt"></i></div>
-        <div class="topic">Responsive Web Design</div>
-        <p>Mobile, tablet and desktop friendly designs for all screen sizes.</p>
+        <div class="topic">Responsive Design</div>
+        <p>Pixel-perfect layouts optimized for mobile, tablet & desktop screens.</p>
       </div>
 
       <div class="box">
         <div class="icon"><i class="fas fa-file-alt"></i></div>
         <div class="topic">Document Design</div>
-        <p>Professional MS Word documents and well-structured MS Excel sheets.</p>
+        <p>Professional MS Word documents & well-structured Excel sheets.</p>
       </div>
 
       <div class="box">
         <div class="icon"><i class="fas fa-paint-brush"></i></div>
         <div class="topic">Basic Graphic Design</div>
-        <p>Simple image, banner and visual design for web and social media.</p>
+        <p>Simple banners, thumbnails & visuals for web and social media.</p>
       </div>
 
       <div class="box">
         <div class="icon"><i class="fas fa-tools"></i></div>
         <div class="topic">Website Customization</div>
-        <p>Improving layout, colors, spacing and fixing UI issues in existing websites.</p>
+        <p>Improving layout, colors, spacing & fixing UI/UX issues.</p>
       </div>
 
     </div>
   </div>
 </section>
 
-  <!-- Contact Section -->
-  <section class="contact" id="contact">
-    <div class="content">
-      <div class="title"><span>Contact Me</span></div>
+  <!-- CONTACT SECTION -->
+<section class="contact dark-contact" id="contact">
+  <div class="content">
 
-      <div class="text">
+    <div class="title">
+      <span>Contact Me</span>
+    </div>
+
+    <div class="contact-box">
+
+      <!-- GLOW EFFECT -->
+      <div class="contact-glow glow-1"></div>
+      <div class="contact-glow glow-2"></div>
+
+      <!-- SWITCH -->
+      <div class="contact-switch">
+        <button class="switch-btn active" id="chatBtn">Quick Chat</button>
+        <button class="switch-btn" id="formBtn">Contact Form</button>
+      </div>
+
+      <!-- CHAT VIEW -->
+      <div class="contact-view chat-view active">
         <div class="topic">Have Any Project?</div>
-        <p>If you have an idea, project, or need help with design or development, feel free to contact me. I am always open to learning, collaborating, and creating clean, user-friendly digital experiences.</p>
+        <p>
+          Let’s talk about your idea or project.
+          I’m always open to collaboration and creative work.
+        </p>
 
-        <div class="button">
-          <button onclick="openChat()">Let's Chat</button>
+        <div class="buttons">
+          <button class="primary" onclick="openChat()">
+            <i class="fab fa-whatsapp"></i> WhatsApp
+          </button>
 
+          <button class="secondary" onclick="sendEmail()">
+            <i class="fas fa-envelope"></i> Email
+          </button>
         </div>
       </div>
+
+      <!-- FORM VIEW -->
+      <div class="contact-view form-view">
+        <form class="contact-form">
+
+          <div class="input-group">
+            <input type="text" required />
+            <label>Name</label>
+          </div>
+
+          <div class="input-group">
+            <input type="email" required />
+            <label>Email</label>
+          </div>
+
+          <div class="input-group">
+            <input type="text" required />
+            <label>Subject</label>
+          </div>
+
+          <div class="input-group">
+            <textarea rows="4" required></textarea>
+            <label>Message</label>
+          </div>
+
+          <button type="submit" class="primary submit-btn">
+            <i class="fas fa-paper-plane"></i> Send Message
+          </button>
+
+          <div class="form-success">
+            <i class="fas fa-check-circle"></i>
+            Message Sent Successfully!
+          </div>
+
+        </form>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Footer -->
-  <footer>
-    <div class="text">
+<footer class="footer">
+  <div class="footer-content">
+
+    <!-- Brand -->
+    <div class="footer-brand">
+      <h3>IA Afiq</h3>
+      <p>Creative UI/UX Designer & Front-End Developer</p>
+    </div>
+
+    <!-- Social Icons -->
+    <div class="footer-social">
+      <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
+    </div>
+
+    <!-- Copyright -->
+    <div class="footer-text">
       <span>
-        Created By <a href="#">CodingLab</a> | &#169; 2021 All Rights Reserved
+        © 2026 • Built with ❤️ by
+        <a href="#">IA Afiq</a>
       </span>
     </div>
-  </footer>
+
+  </div>
+
+  <!-- Back to Top -->
+  <button class="back-to-top" onclick="scrollToTop()">
+    <i class="fas fa-arrow-up"></i>
+  </button>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
