--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
-  <title>Responsive Portfolio Website HTML CSS | CodingNepal</title>
+  <title>My Portfolio</title>
+<link rel="icon" type="image/svg+xml" href="favicon.svg">
 
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Fontawesome CDN Link -->
+  <!-- socal icon -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
   />
+  <!-- nav icon -->
    <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -21,7 +23,7 @@
 
 <body>
    
-  <!-- Move to up button -->
+  <!-- up -->
   <div class="scroll-button">
   <a href="#home">
     <i class="fas fa-arrow-up"></i>
@@ -29,16 +31,14 @@
 </div>
 
 
-  <!-- Navigation menu -->
+  <!-- nav menu -->
   <nav>
   <div class="navbar">
 
-    <!-- LOGO -->
     <div class="logo">
       <a href="#">Portfolio.</a>
     </div>
 
-    <!-- MENU -->
     <ul class="menu">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
@@ -47,19 +47,16 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
 
-    <!-- SOCIAL ICONS (DESKTOP) -->
     <div class="media-icons">
       <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
       <a href="#"><i class="fa-brands fa-twitter"></i></a>
       <a href="#"><i class="fa-brands fa-instagram"></i></a>
     </div>
 
-    <!-- HAMBURGER -->
     <div class="menu-btn">
       <i class="fa-solid fa-bars"></i>
     </div>
 
-    <!-- CLOSE -->
     <div class="cancel-btn">
       <i class="fa-solid fa-xmark"></i>
     </div>
@@ -118,16 +115,17 @@
       </div>
 
       <div class="button">
-        <button onclick="location.href='cv.html'">View CV</button>
-      </div>
+  <button class="primary-btn" type="button" onclick="window.location.href='cv.html'">
+    View CV
+  </button>
+</div>
+
 
     </div>
   </div>
 </section>
 
 
-
-  <!-- Skills Section -->
 <section class="skills dark-skills" id="skills">
   <div class="content">
 
@@ -137,7 +135,6 @@
 
     <div class="skills-details">
 
-      <!-- LEFT CONTENT -->
       <div class="text">
         <div class="topic">Skills Reflect My Knowledge</div>
         <p>
@@ -154,7 +151,6 @@
         </div>
       </div>
 
-      <!-- RIGHT SKILL CARDS -->
       <div class="boxes">
 
         <div class="box">
