--- a/cv.html
+++ b/cv.html
@@ -2,45 +2,59 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>CV | IA Afiq</title>
+<title>IA Afiq | CV</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="cv.css">
 </head>
 <body>
 
-<section class="cv">
-  <div class="cv-box">
+<!-- floating blobs -->
+<div class="blob b1"></div>
+<div class="blob b2"></div>
+
+<section class="cv-wrap">
+  <div class="cv-card">
+
+    <span class="badge">✨ Open to Work</span>
+
     <h1>IA <span>Afiq</span></h1>
     <h3>UI / UX Designer</h3>
 
     <div class="cv-grid">
       <div>
-        <h2>Profile</h2>
+        <h2>🌸 Profile</h2>
         <p>
-          Creative UI/UX designer with strong focus on clean design,
-          usability and responsive layouts.
+          Passionate UI/UX designer creating beautiful,
+          clean and delightful digital experiences.
         </p>
 
-        <h2>Skills</h2>
+        <h2>💎 Skills</h2>
         <ul>
-          <li>UI / UX Design</li>
-          <li>Figma & Adobe XD</li>
-          <li>HTML / CSS</li>
-          <li>Responsive Design</li>
+          <li>🎨 UI / UX Design</li>
+          <li>🧩 Figma & Adobe XD</li>
+          <li>💻 HTML / CSS</li>
+          <li>📱 Responsive Design</li>
         </ul>
       </div>
 
       <div>
-        <h2>Experience</h2>
-        <p><strong>UI Designer</strong><br>Freelance (2022 - Present)</p>
+        <h2>🚀 Experience</h2>
+        <p>
+          <strong>UI Designer</strong><br>
+          Freelance (2022 – Present)
+        </p>
 
-        <h2>Education</h2>
+        <h2>🎓 Education</h2>
         <p>Diploma in Web & UI Design</p>
       </div>
     </div>
 
-    <a class="download" href="cv.pdf" download>Download CV</a>
+    <div class="actions">
+      <a href="cv.pdf" class="btn primary" download>⬇ Download CV</a>
+    </div>
+
   </div>
 </section>
 
