--- a/hire.html
+++ b/hire.html
@@ -73,7 +73,7 @@
   <div class="success-card">
     <div class="icon">✓</div>
     <h2>Message Sent</h2>
-    <p>Your message has been sent to my Telegram.</p>
+    <p>Your message has been sent to my mail.</p>
     <button onclick="closeSuccess()">OK</button>
   </div>
 </div>
