--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="home-content">
     <div class="text">
       <span class="badge">Welcome</span>
-      <h1>I'm <span>I'm IA Afiq</span></h1>
+      <h1>I'm <span>IA Afiq</span></h1>
       <h3>Creative UI/UX Designer & Front-End Developer.</h3>
       <p>
         Crafting modern, clean & user-friendly digital experiences.
